# vietnam-lottery-xsmb

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/: settings.json
.claude/agents/: code-reviewer.md  security-auditor.md
.claude/commands/: deploy.md  fix-issue.md  review.md
.claude/rules/: api-conventions.md  code-style.md  testing.md
.claude/skills/deploy/: SKILL.md
.claude/skills/security-review/: SKILL.md
.github/workflows/: daily-update.yml
data/: xsmb.csv  xsmb.parquet
docs/: USAGE.md
notebooks/: 01_eda.ipynb
src/xsmb/: __init__.py  backfill.py  cli.py  parser.py  render.py  source.py  stats.py  storage.py  types.py
tests/: test_parser.py  test_stats.py  test_storage.py
tests/fixtures/: 01-03-2005.html  02-05-2026.html  10-08-2020.html  15-06-2010.html  20-12-2015.html
